--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,12 +2,9 @@
 main:
 
   - title: "About Me"
-#    url: https://zeldam1.github.io/#about-me
-#    url: http://127.0.0.1:4000/#about-me
     url: /#about-me
 
   - title: "Publications"
-#    url: https://zeldam1.github.io/#Publications
     url: /#Publications
 
 #  - title: "Talks"
@@ -23,7 +20,7 @@ main:
 #    url: /year-archive/
 #
   - title: "CV"
-    url: https://zeldam1.github.io/cv
-    
+    url: /cv/
+
 #  - title: "Guide"
 #    url: /markdown/
