--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,11 @@
 # main links links
 main:
 
-  - title: "About Me"
-    url: /#about-me
+  # - title: "About Me"
+  #   url: /#about-me
 
-  - title: "Publications"
-    url: /#Publications
+  # - title: "Publications"
+  #   url: /#Publications
 
 #  - title: "Talks"
 #    url: /talks/
@@ -19,8 +19,8 @@ main:
 #  - title: "Blog Posts"
 #    url: /year-archive/
 #
-  - title: "CV"
-    url: /cv/
+  # - title: "CV"
+  #   url: /cv/
 
 #  - title: "Guide"
 #    url: /markdown/
